ETS-1732 fixes dropdown focus on IE

--- a/source/scss/components/_common.scss
+++ b/source/scss/components/_common.scss
@@ -1,9 +1,7 @@
-button:focus,
 a:focus,
-div:focus,
 select:focus {
-  outline: 3px solid transparentize($primary, .5);
-  outline-offset: -3px;
+  box-shadow: inset 0 0 0 3px $primary-20 !important;
+  outline: 0 !important;
 }
 
 select:focus::-ms-value {
